lib/misc/ace.h

      /*
       * long on Linux has a variable size depending on the underlying
       * architecture.
       */
      typedef unsigned int   UNSIGNED32;
      typedef unsigned long  UNSIGNED32;
   typedef unsigned short UNSIGNED16;
   typedef unsigned char  UNSIGNED8;
      typedef unsigned short WCHAR;
      typedef unsigned short WCHAR;
         // Long is 64 bits in GCC.
         typedef unsigned long  ADSHANDLE;
         typedef unsigned __int64  ADSHANDLE;
      typedef unsigned long  ADSHANDLE;
   typedef double         DOUBLE;
   typedef LONGLONG         SIGNED64;
         typedef __int64          SIGNED64;
   typedef long long int            SIGNED64;
UNSIGNED32 ENTRYPOINT AdsDDFindFirstObject( ADSHANDLE  hObject,
                                            UNSIGNED16 usFindObjectType,
                                            UNSIGNED8  *pucParentName,
                                            UNSIGNED8  *pucObjectName,
                                            UNSIGNED16 *pusObjectNameLen,
                                            ADSHANDLE  *phFindHandle );
UNSIGNED32 ENTRYPOINT AdsDDFindNextObject( ADSHANDLE  hObject,
                                           ADSHANDLE  hFindHandle,
                                           UNSIGNED8  *pucObjectName,
                                           UNSIGNED16 *pusObjectNameLen );
UNSIGNED32 ENTRYPOINT AdsDDFindClose( ADSHANDLE hObject, ADSHANDLE hFindHandle );
UNSIGNED32 ENTRYPOINT AdsDDCreateLink( ADSHANDLE  hDBConn,
                                       UNSIGNED8  *pucLinkAlias,
                                       UNSIGNED8  *pucLinkedDDPath,
                                       UNSIGNED8  *pucUserName,
                                       UNSIGNED8  *pucPassword,
                                       UNSIGNED32 ulOptions );
UNSIGNED32 ENTRYPOINT AdsDDModifyLink( ADSHANDLE  hDBConn,
                                       UNSIGNED8  *pucLinkAlias,
                                       UNSIGNED8  *pucLinkedDDPath,
                                       UNSIGNED8  *pucUserName,
                                       UNSIGNED8  *pucPassword,
                                       UNSIGNED32 ulOptions );
UNSIGNED32 ENTRYPOINT AdsDDDropLink( ADSHANDLE  hDBConn,
                                     UNSIGNED8  *pucLinkedDD,
                                     UNSIGNED16 usDropGlobal );
UNSIGNED32 ENTRYPOINT AdsDDCreatePublication( ADSHANDLE      hDictionary,
                                              UNSIGNED8      *pucPublicationName,
                                              UNSIGNED8      *pucComments,
                                              UNSIGNED32     ulOptions );
UNSIGNED32 ENTRYPOINT AdsDDGetPublicationProperty( ADSHANDLE  hObject,
                                                   UNSIGNED8  *pucPublicationName,
                                                   UNSIGNED16 usPropertyID,
                                                   VOID       *pvProperty,
                                                   UNSIGNED16 *pusPropertyLen );
UNSIGNED32 ENTRYPOINT AdsDDSetPublicationProperty( ADSHANDLE  hDictionary,
                                                   UNSIGNED8  *pucPublicationName,
                                                   UNSIGNED16 usPropertyID,
                                                   VOID       *pvProperty,
                                                   UNSIGNED16 usPropertyLen );
UNSIGNED32 ENTRYPOINT AdsDDDeletePublication( ADSHANDLE    hDictionary,
                                              UNSIGNED8    *pucPublicationName );
UNSIGNED32 ENTRYPOINT AdsDDCreateArticle( ADSHANDLE      hDictionary,
                                          UNSIGNED8      *pucPublicationName,
                                          UNSIGNED8      *pucObjectName,
                                          UNSIGNED8      *pucRowIdentColumns,
                                          UNSIGNED8      *pucFilter,
                                          UNSIGNED32     ulOptions );
UNSIGNED32 ENTRYPOINT AdsDDCreateArticle100( ADSHANDLE      hDictionary,
                                             UNSIGNED8      *pucPublicationName,
                                             UNSIGNED8      *pucObjectName,
                                             UNSIGNED8      *pucRowIdentColumns,
                                             WCHAR          *pwcFilter,
                                             UNSIGNED32     ulOptions );
UNSIGNED32 ENTRYPOINT AdsDDGetArticleProperty( ADSHANDLE  hObject,
                                               UNSIGNED8  *pucPublicationName,
                                               UNSIGNED8  *pucObjectName,
                                               UNSIGNED16 usPropertyID,
                                               VOID       *pvProperty,
                                               UNSIGNED16 *pusPropertyLen );
UNSIGNED32 ENTRYPOINT AdsDDSetArticleProperty( ADSHANDLE  hDictionary,
                                               UNSIGNED8  *pucPublicationName,
                                               UNSIGNED8  *pucObjectName,
                                               UNSIGNED16 usPropertyID,
                                               VOID       *pvProperty,
                                               UNSIGNED16 usPropertyLen );
UNSIGNED32 ENTRYPOINT AdsDDDeleteArticle( ADSHANDLE    hDictionary,
                                          UNSIGNED8    *pucPublicationName,
                                          UNSIGNED8    *pucObjectName );
UNSIGNED32 ENTRYPOINT AdsDDCreateSubscription( ADSHANDLE      hDictionary,
                                               UNSIGNED8      *pucSubscriptionName,
                                               UNSIGNED8      *pucPublicationName,
                                               UNSIGNED8      *pucTarget,
                                               UNSIGNED8      *pucUser,
                                               UNSIGNED8      *pucPassword,
                                               UNSIGNED8      *pucReplicationQueue,
                                               UNSIGNED16     usForward,
                                               UNSIGNED8      *pucComments,
                                               UNSIGNED32     ulOptions );
UNSIGNED32 ENTRYPOINT AdsDDGetSubscriptionProperty( ADSHANDLE  hObject,
                                                    UNSIGNED8  *pucSubscriptionName,
                                                    UNSIGNED16 usPropertyID,
                                                    VOID       *pvProperty,
                                                    UNSIGNED16 *pusPropertyLen );
UNSIGNED32 ENTRYPOINT AdsDDSetSubscriptionProperty( ADSHANDLE  hDictionary,
                                                    UNSIGNED8  *pucSubscriptionName,
                                                    UNSIGNED16 usPropertyID,
                                                    VOID       *pvProperty,
                                                    UNSIGNED16 usPropertyLen );
UNSIGNED32 ENTRYPOINT AdsDDDeleteSubscription( ADSHANDLE    hDictionary,
                                               UNSIGNED8    *pucSubscriptionName );
UNSIGNED32 ENTRYPOINT AdsDecryptRecord( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsDecryptTable( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsDeleteCustomKey( ADSHANDLE hIndex );
UNSIGNED32 ENTRYPOINT AdsDeleteIndex( ADSHANDLE hIndex );
UNSIGNED32 ENTRYPOINT AdsDeleteRecord( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsGetKeyColumn( ADSHANDLE  hCursor,
                                       UNSIGNED8  *pucKeyColumn,
                                       UNSIGNED16 *pusLen );
UNSIGNED32 ENTRYPOINT AdsGetKeyFilter( ADSHANDLE  hTable,
                                       UNSIGNED8  *pucValuesTable,
                                       UNSIGNED32 ulOptions,
                                       UNSIGNED8  *pucFilter,
                                       UNSIGNED32 *pulLength );
UNSIGNED32 ENTRYPOINT AdsDisableEncryption( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsDisableLocalConnections( void );
UNSIGNED32 ENTRYPOINT AdsDisconnect( ADSHANDLE hConnect );
UNSIGNED32 ENTRYPOINT AdsEnableEncryption( ADSHANDLE hTable,
                                           UNSIGNED8 *pucPassword );
UNSIGNED32 ENTRYPOINT AdsEncryptRecord( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsEncryptTable( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsEvalLogicalExpr(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucExpr,
                              UNSIGNED16       *pbResult );
UNSIGNED32 ENTRYPOINT AdsEvalLogicalExprW(
                              ADSHANDLE        hTable,
                              WCHAR            *pwcExpr,
                              UNSIGNED16       *pbResult );
UNSIGNED32 ENTRYPOINT AdsEvalNumericExpr(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucExpr,
                              DOUBLE           *pdResult );
UNSIGNED32 ENTRYPOINT AdsEvalStringExpr(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucExpr,
                              UNSIGNED8        *pucResult,
                              UNSIGNED16       *pusLen );
UNSIGNED32 ENTRYPOINT AdsEvalTestExpr(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucExpr,
                              UNSIGNED16       *pusType );
UNSIGNED32 ENTRYPOINT AdsExtractKey(
                              ADSHANDLE        hIndex,
                              UNSIGNED8        *pucKey,
                              UNSIGNED16       *pusLen );
UNSIGNED32 ENTRYPOINT AdsFailedTransactionRecovery( UNSIGNED8 *pucServer );
UNSIGNED32 ENTRYPOINT AdsFileToBinary(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED16       usBinaryType,
                              UNSIGNED8        *pucFileName );
UNSIGNED32 ENTRYPOINT AdsFindConnection(
                              UNSIGNED8        *pucServerName,
                              ADSHANDLE        *phConnect );
UNSIGNED32 ENTRYPOINT AdsFindConnection25(
                              UNSIGNED8        *pucFullPath,
                              ADSHANDLE        *phConnect );
UNSIGNED32 ENTRYPOINT AdsFindClose( ADSHANDLE hConnect, ADSHANDLE lHandle );
   UNSIGNED32 ENTRYPOINT AdsRegisterProgressCallback(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent ) );
   UNSIGNED32 ENTRYPOINT AdsRegisterCallbackFunction(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent, UNSIGNED32 ulCallbackID ),
         UNSIGNED32 ulCallbackID );
   UNSIGNED32 ENTRYPOINT AdsRegisterCallbackFunction101(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent, SIGNED64 qCallbackID ),
         SIGNED64 qCallbackID );
   UNSIGNED32 ENTRYPOINT AdsRegisterSQLAbortFunc( UNSIGNED32 (WINAPI *lpfnCallback)(void) );
   UNSIGNED32 ENTRYPOINT AdsRegisterUDF( ADSHANDLE  hObj,
                                         UNSIGNED16 usType,
                                         UNSIGNED32 (WINAPI *lpfnUDF)(void) );