lib/misc/ace.pas


      function AdsDDFindFirstObject( hObject: ADSHANDLE;
                                     usFindObjectType: UNSIGNED16;
                                     pucParentName: PAceChar;
                                     pucObjectName: PAceChar;
                                     pusObjectNameLen: PUNSIGNED16;
                                     phFindHandle: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDFindNextObject( hObject: ADSHANDLE;
                                    hFindHandle: ADSHANDLE;
                                    pucObjectName: PAceChar;
                                    pusObjectNameLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDFindClose( hObject: ADSHANDLE;
                               hFindHandle: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateLink( hDBConn: ADSHANDLE;
                                pucLinkAlias: PAceChar;
                                pucLinkedDDPath: PAceChar;
                                pucUserName: PAceChar;
                                pucPassword: PAceChar;
                                ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDModifyLink( hDBConn: ADSHANDLE;
                                pucLinkAlias: PAceChar;
                                pucLinkedDDPath: PAceChar;
                                pucUserName: PAceChar;
                                pucPassword: PAceChar;
                                ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDDropLink( hDBConn: ADSHANDLE;
                              pucLinkedDD: PAceChar;
                              usDropGlobal: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreatePublication( hDictionary: ADSHANDLE;
                                       pucPublicationName: PAceChar;
                                       pucComments: PAceChar;
                                       ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetPublicationProperty( hObject: ADSHANDLE;
                                            pucPublicationName: PAceChar;
                                            usPropertyID: UNSIGNED16;
                                            pvProperty: pointer;
                                            pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetPublicationProperty( hDictionary: ADSHANDLE;
                                            pucPublicationName: PAceChar;
                                            usPropertyID: UNSIGNED16;
                                            pvProperty: pointer;
                                            usPropertyLen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDDeletePublication( hDictionary: ADSHANDLE;
                                       pucPublicationName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateArticle( hDictionary: ADSHANDLE;
                                   pucPublicationName: PAceChar;
                                   pucObjectName: PAceChar;
                                   pucRowIdentColumns: PAceChar;
                                   pucFilter: PAceChar;
                                   ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateArticle100( hDictionary: ADSHANDLE;
                                      pucPublicationName: PAceChar;
                                      pucObjectName: PAceChar;
                                      pucRowIdentColumns: PAceChar;
                                      pwcFilter: PWideChar;
                                      ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetArticleProperty( hObject: ADSHANDLE;
                                        pucPublicationName: PAceChar;
                                        pucObjectName: PAceChar;
                                        usPropertyID: UNSIGNED16;
                                        pvProperty: pointer;
                                        pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetArticleProperty( hDictionary: ADSHANDLE;
                                        pucPublicationName: PAceChar;
                                        pucObjectName: PAceChar;
                                        usPropertyID: UNSIGNED16;
                                        pvProperty: pointer;
                                        usPropertyLen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDDeleteArticle( hDictionary: ADSHANDLE;
                                   pucPublicationName: PAceChar;
                                   pucObjectName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDCreateSubscription( hDictionary: ADSHANDLE;
                                        pucSubscriptionName: PAceChar;
                                        pucPublicationName: PAceChar;
                                        pucTarget: PAceChar;
                                        pucUser: PAceChar;
                                        pucPassword: PAceChar;
                                        pucReplicationQueue: PAceChar;
                                        usForward: UNSIGNED16;
                                        pucComments: PAceChar;
                                        ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDGetSubscriptionProperty( hObject: ADSHANDLE;
                                             pucSubscriptionName: PAceChar;
                                             usPropertyID: UNSIGNED16;
                                             pvProperty: pointer;
                                             pusPropertyLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDSetSubscriptionProperty( hDictionary: ADSHANDLE;
                                             pucSubscriptionName: PAceChar;
                                             usPropertyID: UNSIGNED16;
                                             pvProperty: pointer;
                                             usPropertyLen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDDDeleteSubscription( hDictionary: ADSHANDLE;
                                        pucSubscriptionName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDecryptRecord( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDecryptTable( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDeleteCustomKey( hIndex: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDeleteIndex( hIndex: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDeleteRecord( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetKeyColumn( hCursor: ADSHANDLE;
                                pucKeyColumn: PAceChar;
                                pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetKeyFilter( hTable: ADSHANDLE;
                                pucValuesTable: PAceChar;
                                ulOptions: UNSIGNED32;
                                pucFilter: PAceChar;
                                pulLength: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDisableEncryption( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDisableLocalConnections:UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsDisconnect( hConnect: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsEnableEncryption( hTable: ADSHANDLE;
                                    pucPassword: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsEncryptRecord( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsEncryptTable( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsEvalLogicalExpr( hTable: ADSHANDLE;
                                   pucExpr: PAceChar;
                                   pbResult: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsEvalLogicalExprW( hTable: ADSHANDLE;
                                    pwcExpr: PWideChar;
                                    pbResult: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsEvalNumericExpr( hTable: ADSHANDLE;
                                   pucExpr: PAceChar;
                                   pdResult: pDOUBLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsEvalStringExpr( hTable: ADSHANDLE;
                                  pucExpr: PAceChar;
                                  pucResult: PAceChar;
                                  pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsEvalTestExpr( hTable: ADSHANDLE;
                                pucExpr: PAceChar;
                                pusType: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsExtractKey( hIndex: ADSHANDLE;
                              pucKey: PAceChar;
                              pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsFailedTransactionRecovery( pucServer: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsFileToBinary( hTable: ADSHANDLE;
                                pucFldName: PAceChar;
                                usBinaryType: UNSIGNED16;
                                pucFileName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsFindConnection( pucServerName: PAceChar;
                                  phConnect: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsFindConnection25( pucFullPath: PAceChar;
                                    phConnect: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsFindClose( hConnect: ADSHANDLE;
                             lHandle: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
